--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Let's start the game</title>
+    <title>Let's play happy notes</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
-    <script src="./js/jquery-3.2.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Dosis:600" rel="stylesheet">
     <script src="./dist/out.js"></script>
 </head>
-<body id="app">
-
+<body>
+  <div id="app"></div>
 </body>
 </html>
